# LookUpTable

./: CMakeLists.txt  main.c
headers/: cosinusTable.h  fileOps.h  sinusTable.h
src/: fileOps.c
